check_output.txt
    Checking contextd v0.1.0 (/home/sachin/Desktop/Code/contextd)
warning: unused import: `std::path::Path`
 --> src/indexer/embeddings.rs:4:5
  |
4 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0308]: mismatched types
   --> src/storage/db.rs:363:24
    |
363 |                 if let Some(l) = limit {
    |                        ^^^^^^^   ----- this expression has type `usize`
    |                        |
    |                        expected `usize`, found `Option<_>`
    |
    = note: expected type `usize`
               found enum `std::option::Option<_>`

warning: unused variable: `splits`
   --> src/indexer/chunker.rs:368:9
    |
368 |     let splits = content.split(|c| c == '\n' || c == '\x0c');
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_splits`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
   --> src/storage/db.rs:215:13
    |
215 |         let mut vector_options = SearchOptions {
    |             ----^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

For more information about this error, try `rustc --explain E0308`.
warning: `contextd` (bin "contextd") generated 3 warnings
error: could not compile `contextd` (bin "contextd") due to 1 previous error; 3 warnings emitted
